--- a/catalog/view/theme/default/template/checkout/checkout/_confirm.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_confirm.twig
@@ -7,7 +7,7 @@
   {% else %}
     <div class="table-responsive">
       <table class="table table-hover" style="border: 0px;">
-        {#<thead>#}
+        <thead>
           {#<tr>#}
             {#<td class="text-left"></td>#}
             {#<td class="text-left">{{ column_name }}</td>#}
@@ -16,8 +16,8 @@
             {#<td class="text-right">{{ column_price }}</td>#}
             {#<td class="text-right">{{ column_total }}</td>#}
           {#</tr>#}
-        {#</thead>#}
-        {#<tbody>#}
+        </thead>
+        <tbody>
           {#{% for product in products %}#}
           {#<tr>#}
             {#<td style="width:60px"><img src="{{ product.image }}" class="thumbnail"></td>#}
@@ -43,7 +43,8 @@
             {#<td class="text-right">{{ voucher.amount }}</td>#}
           {#</tr>#}
           {#{% endfor %}#}
-        {#</tbody>#}
+        &nbsp;
+        </tbody>
         <tfoot>
           {% for total in totals %}
           <tr>
