--- a/catalog/view/theme/default/template/common/cart.twig
+++ b/catalog/view/theme/default/template/common/cart.twig
@@ -1,55 +1,67 @@
-<div id="cart" class="btn-group btn-block">
-  <button type="button" data-loading-text="{{ text_loading }}" class="btn btn-inverse btn-block dropdown-toggle"><i class="fa fa-shopping-bag" aria-hidden="true"></i> <span id="cart-total">{{ text_items }}</span></button>
-  <ul class="dropdown-menu pull-right">
-    {% if products or vouchers %}
-    <li class="products">
-      <table class="table table-striped">
-        {% for product in products %}
-        <tr>
-          <td class="text-center">{% if product.thumb %} <a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-thumbnail" /></a> {% endif %}</td>
-          <td class="text-left"><a class="name" href="{{ product.href }}" title="{{ product.name }}">{{ product.name }}</a> {% if product.option %}
-            {% for option in product.option %} <br />
-            - <small>{{ option.name }} {{ option.value }}</small> {% endfor %}
-            {% endif %}
-          </td>
-          <td class="text-right">x {{ product.quantity }}</td>
-          <td class="text-right">{{ product.total }}</td>
-          <td class="text-center"><button type="button" onclick="cart.remove('{{ product.cart_id }}');" title="{{ button_remove }}" class="btn btn-danger btn-xs"><i class="fa fa-times"></i></button></td>
-        </tr>
-        {% endfor %}
-        {% for voucher in vouchers %}
-        <tr>
-          <td class="text-center"></td>
-          <td class="text-left">{{ voucher.description }}</td>
-          <td class="text-right">x&nbsp;1</td>
-          <td class="text-right">{{ voucher.amount }}</td>
-          <td class="text-center text-danger"><button type="button" onclick="voucher.remove('{{ voucher.key }}');" title="{{ button_remove }}" class="btn btn-danger btn-xs"><i class="fa fa-times"></i></button></td>
-        </tr>
-        {% endfor %}
-      </table>
-    </li>
-    <li>
-      <div>
-        <table class="table table-bordered">
-          {% for total in totals %}
-          <tr>
-            <td class="text-right"><strong>{{ total.title }}</strong></td>
-            <td class="text-right">{{ total.text }}</td>
-          </tr>
-          {% endfor %}
-        </table>
-        <div class="row">
-          <div class="col-sm-6">
-            <a href="{{ cart }}" class="btn btn-default btn-block"><strong><i class="fa fa-shopping-cart"></i> {{ text_cart }}</strong></a>
-          </div>
-          <div class="col-sm-6"><a href="{{ checkout }}" class="btn btn-primary btn-block"><strong><i class="fa fa-share"></i> {{ text_checkout }}</strong></a></div>
-        </div>
-      </div>
-    </li>
-    {% else %}
-    <li>
-      <p class="text-center no-results"><i class="fa fa-sticky-note-o" aria-hidden="true"></i> {{ text_no_results }}</p>
-    </li>
-    {% endif %}
-  </ul>
-</div>
+<div id="attr_shopcart" class="c-headsb hd-cart-bag">
+                <div class="attribute_cart shopcart-cart">
+                  <div class="shopcart-top">
+                    <form action="" name="theForm_shop" method="post">
+                      <div style="width: auto;">
+                        <div id="shop-cart-scroll" style=" height:300px; overflow-y: scroll; overflow-x: hidden;">
+                          {#<input id="update_shopping_price_type" name="update_shopping_price_type" value="shopping_cart" type="hidden" />#}
+                        {% for product in products %}
+                          <div class="shopping-product">
+                            <div class="cart_error" style="display: none;" goods_id_value="_396259"></div>
+                            <div class=" shoppingtop-img">
+                                {% if product.thumb %} <a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-thumbnail" /></a> {% endif %}
+                            </div>
+                            <div class="shoppingtop-right">
+                              <div class=" discount_goods_price_396259 basket-cont shoppingtop-basket">
+                                <span class="shop-index-price shop_price" price="US$15.00"><strong class="final_price_strong">{{ product.total }}</strong></span>
+                              </div>
+                              <div class="shoppingtop-name">
+                                <a href="{{ product.href }}" target="_top"><span class="goods-brand"></span>{{ product.name }}</a>
+                              </div>
+                              {#<span class="she-dispatch"><i class="iconfont"></i>Priority dispatching</span>#}
+                              {#<a class="share_button_on share_button_396259" href="javascript:void(0);" onclick="show_facebook_div('396259')"></a>#}
+                              {#<div class="share_wenzi_396259 share_header_explain">#}
+                                {#<strong>(5%off)</strong>#}
+                              {#</div>#}
+                              <div class="attribute-shopcart">
+                                <a class="shop-remove-a iconfont" href="javascript:void(0)" onclick="cart.remove('{{ product.cart_id }}');"></a>
+                              </div>
+                              <div class="j-attr-goods shop-input" style="left: 0px; position: relative;">
+                                <div class=" inbasket-quantity">
+                                  <input name="goods_arr[]" value="396259" type="hidden" />
+                                  <input name="goods_name[]" value="Grommet Lace Up Sleeve Crop Hoodie" type="hidden" />
+                                  <input name="is_on_sale[]" value="1" type="hidden" />
+                                  <div class="red display-none" id="381926375j-limit-tip"></div>
+                                  <a class="reduce iconfont j-reduce-381926375 disable" onclick="setAttrAmount.reduce('#381926375',396259)" href="javascript:void(0)"></a>
+                                  <input class="quantityselect-bg" name="quantity_396259" value="1" id="381926375" onfocus="setAttrAmount.record('#381926375');" onblur="setAttrAmount.modify('#381926375',396259,undefined,0,7)" type="text" />
+                                  <a class="j-cart-add add iconfont" onclick="setAttrAmount.add('#381926375',396259,undefined,0,7)" href="javascript:void(0)"></a>
+                                </div>
+                                <div class="attr_basket_cont4 attr-basket-cont4" style="top: 0px;">
+                                  <div class="attr_inbasket_total">
+                                    <span class="shop-total-label">Total:</span>
+                                    <span class="shoppingtop-span">
+                    <div id="subtotal_381926375" class="item_total">
+                     {{ product.total }}
+                    </div></span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div></div>
+                        {% endfor %}
+                        </div>
+                     {% set first = totals|first %}
+                        {#<p class="attr-total" id="attr_retail_price" style="padding-top: 10px;">Retail Price:<a id="shipping_retail_price">{{ first.text }}</a></p>#}
+                        {#<p class="attr-total" id="attr_retail_price_discount" style="display: none;"><span>Discount<a>0</a>off</span></p>#}
+                        <p class="attr-total" id="attr_total" style="font-weight: bold;"><span class="shipping-total-label">Total:</span><span class="shipping-total" style="color: rgb(209, 0, 0);" id="shipping_total">{{ first.text }}</span></p>
+                        <div class="shoppingtop-baskets">
+                          <input class="she-btn-black she-btn-l viewbag" name="viewcart" value="view bag" type="submit" />
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+                <img src="/catalog/view/theme/default/image/index/js_grey.gif" style="display: block;" />
+              </div>
