--- a/catalog/view/theme/default/template/account/account.twig
+++ b/catalog/view/theme/default/template/account/account.twig
@@ -29,7 +29,7 @@
                   <div class="con-right-p">
                     <ol>
                       <li class="center-fir">
-                        Use in your purchase, <a href="#">SHOP NOW </a>&gt;
+                        Use in your purchase, <a href="index.php">SHOP NOW </a>&gt;
                       </li>
                       <!--  暂时废弃
                           <li>2. Use 10 points exchanges discounts, <a href='http://www.shein.com/in-it-to-win-it.html?icn=inittowinit&ici=www_myaccount&url_from=wwwinittowinitrightlink'>right here </a>></li>
