--- a/catalog/view/theme/default/template/common/language.twig
+++ b/catalog/view/theme/default/template/common/language.twig
@@ -1,21 +1,24 @@
 {% if languages|length > 1 %}
-<div class="pull-left">
+<div class="pull-left country" id="switch_lang">
   <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-language">
     <div class="btn-group">
-      <button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
+      <a class="btn btn-link dropdown-toggle present" data-toggle="dropdown"  id="txt_lang">
       {% for language in languages %}
       {% if language.code == code %}
-      <img src="catalog/language/{{ language.code }}/{{ language.code }}.png" alt="{{ language.name }}" title="{{ language.name }}">
+        <img src="catalog/language/{{ language.code }}/{{ language.code }}.png" alt="{{ language.name }}" title="{{ language.name }}">&nbsp;
+          {{ language.name }}
       {% endif %}
       {% endfor %}
-      <span class="hidden-xs hidden-sm hidden-md">{{ text_language }}</span>&nbsp;<i class="fa fa-caret-down"></i></button>
-      <ul class="dropdown-menu">
+      </a>
+      <div class="dropdown-menu dropdown" id="lang_list">
         {% for language in languages %}
-        <li>
-          <button class="btn btn-link btn-block language-select" type="button" name="{{ language.code }}"><img src="catalog/language/{{ language.code }}/{{ language.code }}.png" alt="{{ language.name }}" title="{{ language.name }}" /> {{ language.name }}</button>
-        </li>
+        <a>
+          <button class="btn btn-link btn-block language-select" type="button" name="{{ language.code }}">
+            <img src="catalog/language/{{ language.code }}/{{ language.code }}.png" alt="{{ language.name }}" title="{{ language.name }}" />
+              {{ language.name }}</button>
+        </a>
         {% endfor %}
-      </ul>
+      </div>
     </div>
     <input type="hidden" name="code" value="" />
     <input type="hidden" name="redirect" value="{{ redirect }}" />
