--- a/catalog/view/theme/default/template/account/account.twig
+++ b/catalog/view/theme/default/template/account/account.twig
@@ -117,7 +117,7 @@
         </ul>
         <div class="con-foot">
           <div style="text-align: center;">
-            <a class="she-btn-white j-member-accout-signout" href="{{ logout }}">Sign out</a>
+            <a class="she-btn-white j-member-accout-signout" href="{{ logout }}">{{ text_logout }}</a>
           </div>
           <div class="con-foot-p">
             <p style="margin-top: 10px;">It’s better to sign out after you finish your shopping so that you could make sure that your account safe.</p>
