--- a/catalog/view/theme/default/template/account/address_form.twig
+++ b/catalog/view/theme/default/template/account/address_form.twig
@@ -268,8 +268,11 @@
           <div class="pull-left"><a href="{{ back }}" class="btn btn-default">{{ button_back }}</a></div>
         </div>
       </form>
+        <div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div><div>&nbsp;</div>
       {{ content_bottom }}</div>
     {#{{ column_right }}</div>#}
+
+
 </div>
 <script type="text/javascript"><!--
 // Sort the custom fields
