--- a/catalog/view/theme/default/template/account/password.twig
+++ b/catalog/view/theme/default/template/account/password.twig
@@ -6,7 +6,7 @@
 
       <div class="she-center-editpass">
         <form class="formlist list-input" action="{{ action }}" method="post" enctype="multipart/form-data" method="post">
-          <p>If  you want to change your password, you can edit it here.</p>
+          {#<p>If  you want to change your password, you can edit it here.</p>#}
           {#<div class="form-group" style="margin-bottom: 40px; margin-top: 0px;">#}
             {#<label style="margin-top: 48px;">Old Password:#}
               {#<font color="#FF0000">*</font>#}
