--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -29,6 +29,7 @@
   <link media="all" href="catalog/view/theme/default/css/edit.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/category.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/goods-db2c456a45.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/ticket.css" type="text/css" rel="stylesheet">
 
   <link media="all" href="/catalog/view/theme/default/css/orderdetails.css" type="text/css" rel="stylesheet">
   {#<link media="all" href="catalog/view/theme/javascript/common.js" type="text/js" rel="stylesheet">#}
@@ -49,7 +50,7 @@
       <div class="container-fluid mar-b-0">
         <div class="row">
           <div class="left col-xs-5">
-            <div style="margin-top: -7%">
+            <div style="margin-top: -10%;">
               {{ language }}
             </div>
 
