--- a/catalog/view/theme/default/template/account/address_list.twig
+++ b/catalog/view/theme/default/template/account/address_list.twig
@@ -1,4 +1,10 @@
 {{ header }}
+{% if success %}
+    <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
+{% endif %}
+  {% if error_warning %}
+      <div class="alert alert-warning"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  {% endif %}
     {{ column_left }}
     <div class="col-sm-9 col-xs-12 macc-address j-macc-address">
       <h3 class="she-tl-h3">{{ text_address_book }}</h3>
@@ -32,7 +38,7 @@
         <div class="body" style="overflow: hidden;">
             <span class="iconfont she-close-btn j-adr-cancel-btn"></span>
             {#<p class="ind"> Shipping Address </p>#}
-            <iframe src="" name="myframe" style="position:relative;top:-150px;left:-323px;"  width="1200" height="698" scrolling="no" frameborder="0" id="myframe" border="0" ></iframe>
+            <iframe src="" name="myframe" style="position:relative;top:-150px;left:-323px;"  width="1200" height="728" scrolling="no" frameborder="0" id="myframe" border="0" ></iframe>
         </div>
     </div>
 </div>
