--- a/catalog/view/theme/default/template/common/currency.twig
+++ b/catalog/view/theme/default/template/common/currency.twig
@@ -1,19 +1,19 @@
 {% if currencies|length > 1 %}
-<div class="pull-left" style="margin-top: -9%">
+<div class="pull-left" style="margin-top: -8%">
   <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-currency">
     <div class="btn-group currency" id="user_menu3">
       <a class="btn btn-link dropdown-toggle present three outer j-present-currency" data-toggle="dropdown">{% for currency in currencies %}
-      {% if currency.symbol_left and currency.code == code %} <strong>{{ currency.symbol_left }}</strong> {% elseif currency.symbol_right and currency.code == code %} <strong>{{ currency.symbol_right }}</strong> {% endif %}
-      {% endfor %} <span class="hidden-xs hidden-sm hidden-md">{{ text_currency }}</span></a>
-      <div class="dropdown-menu dropdown user_menu3_update" id="user_menu3_coon">
+      {% if currency.symbol_left and currency.code == code %} <span  style=" color: #666;text-decoration: none;font-size: 12px;">{{ currency.title }}</span> {% elseif currency.symbol_right and currency.code == code %} <span  style=" color: #666;text-decoration: none;font-size: 12px;">{{ currency.title }}</span> {% endif %}
+      {% endfor %} </a>
+      <div class="dropdown user_menu3_update" id="user_menu3_coon" style="width: auto;padding: 0;top: 55px;">
         {% for currency in currencies %}
         {% if currency.symbol_left %}
         <a>
-          <button class="currency-select btn btn-link btn-block" type="button" name="{{ currency.code }}">{{ currency.symbol_left }} {{ currency.title }}</button>
+          <button class="currency-select btn btn-link btn-block" type="button" name="{{ currency.code }}" style="color: #666;text-decoration: none;font-size: 12px;line-height: 5px;text-align: left"><img src="/catalog/view/theme/default/image/flag/flag_us.gif" style="width: 16px;height: 12px;margin-right: 10px;margin-top: -2px;"> {{ currency.title }}</button>
         </a>
         {% else %}
         <a>
-          <button class="currency-select btn btn-link btn-block" type="button" name="{{ currency.code }}">{{ currency.symbol_right }} {{ currency.title }}</button>
+          <button class="currency-select btn btn-link btn-block" type="button" name="{{ currency.code }}"  style="color: #666;text-decoration: none;font-size: 12px;line-height: 5px"><img src="/catalog/view/theme/default/image/flag/flag_us.gif" style="width: 16px;height: 12px;margin-right: 10px;margin-top: -2px;"> {{ currency.title }}</button>
         </a>
         {% endif %}
         {% endfor %}
